--- a/styledate.css
+++ b/styledate.css
@@ -9,7 +9,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 90vh;
-    background-color: #d0ffdd;
+    background-color: #fff4d0;
 }
 
 #noButton{
@@ -43,7 +43,7 @@ body{
 }
 
 .btn{
-    background-color: #b6ffce;
+    background-color: #ffb6d8;
     color: white;
     padding: 15px 32px;
     text-align: center;
